Added missing red rules for the hm t L (ms L v) and ML cases.

--- a/macros.tex
+++ b/macros.tex
@@ -215,5 +215,6 @@
 \newcommand{\errempty}{\str{Empty \; list}\xspace}
 \newcommand{\errtype}{\str{Type \; mismatch}\xspace}
 \newcommand{\errbrand}{\str{Brand \; mismatch}\xspace}
+\newcommand{\errvalue}{\str{Bad \; value}\xspace}
 
 %\newcommand{\}{}
