--- a/model/ml/operational-semantics/haskell.tex
+++ b/model/ml/operational-semantics/haskell.tex
@@ -16,6 +16,13 @@ $(\first{\vartym} = \second{\vartym}$ and $\first{\vartym} \neq \tylump)$ \\
 {\expwrongs{\vartym}{\errtype}}
 $(\first{\vartym} \neq \second{\vartym}$ and $\first{\vartym} \neq \tylump)$ \\
 
+% mh t L (hs L v)
+
+\redruleh
+{\expmh{\vartym}{\tylump}{(\exphs{\cslump}{\varvalfs})}}
+{\expwrongs{\vartym}{\errvalue}}
+$(\vartym \neq \tylump)$ \\
+
 % mh N N n
 
 \redrulem
