Added another numbering macro. Finished the ps HM cases.

--- a/macros.tex
+++ b/macros.tex
@@ -190,6 +190,7 @@
 \newcommand{\second}[1]{\ensuremath{#1'}}
 \newcommand{\third}[1]{\ensuremath{#1''}}
 \newcommand{\fourth}[1]{\ensuremath{#1'''}}
+\newcommand{\fifth}[1]{\ensuremath{#1''''}}
 \newcommand{\ith}[1]{\formindex{#1}{i}}
 
 % Miscellaneous
