--- a/macros.tex
+++ b/macros.tex
@@ -218,4 +218,39 @@
 \newcommand{\errbrand}{\str{Brand \; mismatch}\xspace}
 \newcommand{\errvalue}{\str{Bad \; value}\xspace}
 
+% Progress
+
+\newcommand{\pscasesone}[3]{If #1 is a \profv then #2 determines the reduction of #3.}
+\newcommand{\pscasestwo}[4]{If #1 is a \profv then #2 and #3 determine the reduction of #4.}
+
+\newcommand{\pserr}[2]{If #1 \red \emph{\experr{\varstr}} then #2 \red \emph{\experr{\varstr}}.}
+\newcommand{\pserrand}[3]{If #1 \red \emph{\experr{\varstr}} and #2 is a \profv then #3 \red \emph{\experr{\varstr}}.}
+
+\newcommand{\pshyp}[2]{#1 is a \profv or #1 \red #2 or #1 \red \emph{\experr{\varstr}}}
+\newcommand{\pshypby}[2]{\pshyp{#1}{#2} by the induction hypothesis.}
+
+\newcommand{\pssub}[4]{If #1 \red #2 then #3 \red #4.}
+\newcommand{\pssuband}[5]{If #1 \red #2 and #3 is a \profv then #4 \red #5.}
+
+\newcommand{\psred}[2]{\redrule{#1}{#2}.}
+\newcommand{\psrednote}[3]{\redrule{#1}{#2} $(#3)$.}
+
+\newcommand{\psval}[2]{#1 by lemmas \ref{leminv} and \ref{lemuni} and #2 by lemma \ref{lemcan}.}
+\newcommand{\psvalh}[3]{\psval{\judeh{}{#1}{#2}}{#3}}
+\newcommand{\psvalm}[3]{\psval{\judem{}{#1}{#2}}{#3}}
+\newcommand{\psvaleqh}[3]{\psvalh{#1}{#2}{#1 $=$ #3}}
+\newcommand{\psvaleqm}[3]{\psvalm{#1}{#2}{#1 $=$ #3}}
+\newcommand{\psvalinh}[3]{\psvalh{#1}{#2}{$#1 \in \lbrace #3 \rbrace$}}
+\newcommand{\psvalinm}[3]{\psvalm{#1}{#2}{$#1 \in \lbrace #3 \rbrace$}}
+\newcommand{\psvalif}[2]{If #1 is a \profv then #2}
+\newcommand{\psvalifeqh}[3]{\psvalif{#1}{\psvaleqh{#1}{#2}{#3}}}
+\newcommand{\psvalifeqm}[3]{\psvalif{#1}{\psvaleqm{#1}{#2}{#3}}}
+\newcommand{\psvalifinh}[3]{\psvalif{#1}{\psvalinh{#1}{#2}{#3}}}
+\newcommand{\psvalifinm}[3]{\psvalif{#1}{\psvalinm{#1}{#2}{#3}}}
+
+\newcommand{\w}{}
+\newcommand{\x}{}
+\newcommand{\y}{}
+\newcommand{\z}{}
+
 %\newcommand{\}{}
