--- a/proof/theorems/progress/scheme.tex
+++ b/proof/theorems/progress/scheme.tex
@@ -1,6 +1,6 @@
-\begin{theorem}{Scheme Progress Theorem}
+\begin{theorem}{Scheme Progress}
 
-\label{sps}
+\label{thmpss}
 
 If $\vdash_{S}e_{S}:TST$ then $e_{S}$ is an unforced value or $e_{S}\rightarrow e_{S}'$ or $e_{S}\rightarrow$ \emph{\textbf{Error}: string}.
 
