--- a/macros.tex
+++ b/macros.tex
@@ -242,11 +242,12 @@
 \newcommand{\psvaleqm}[3]{\psvalm{#1}{#2}{#1 $=$ #3}}
 \newcommand{\psvalinh}[3]{\psvalh{#1}{#2}{$#1 \in \lbrace #3 \rbrace$}}
 \newcommand{\psvalinm}[3]{\psvalm{#1}{#2}{$#1 \in \lbrace #3 \rbrace$}}
-\newcommand{\psvalif}[2]{If #1 is a \profv then #2}
-\newcommand{\psvalifeqh}[3]{\psvalif{#1}{\psvaleqh{#1}{#2}{#3}}}
-\newcommand{\psvalifeqm}[3]{\psvalif{#1}{\psvaleqm{#1}{#2}{#3}}}
-\newcommand{\psvalifinh}[3]{\psvalif{#1}{\psvalinh{#1}{#2}{#3}}}
-\newcommand{\psvalifinm}[3]{\psvalif{#1}{\psvalinm{#1}{#2}{#3}}}
+\newcommand{\psvalifone}[2]{If #1 is a \profv then #2}
+\newcommand{\psvaliftwo}[3]{If #1 and #2 are \profvs then #3}
+\newcommand{\psvalifeqh}[3]{\psvalifone{#1}{\psvaleqh{#1}{#2}{#3}}}
+\newcommand{\psvalifeqm}[3]{\psvalifone{#1}{\psvaleqm{#1}{#2}{#3}}}
+\newcommand{\psvalifinh}[3]{\psvalifone{#1}{\psvalinh{#1}{#2}{#3}}}
+\newcommand{\psvalifinm}[3]{\psvalifone{#1}{\psvalinm{#1}{#2}{#3}}}
 
 \newcommand{\w}{}
 \newcommand{\x}{}
